--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,8 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.github.GrenderG:Toasty:1.2.8'
 
+    implementation "android.arch.lifecycle:extensions:1.0.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+
+
 }
