--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,38 +9,6 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".mvvm.View.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".mvvm.View.GroupForm"
-            android:label="@string/title_activity_group_form"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".mvvm.View.GroupView"
-            android:label="@string/title_activity_group_view"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".mvvm.View.EventView"
-            android:label="@string/title_activity_event_view"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".mvvm.View.LoginView"
-            android:label="@string/title_activity_login_view"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".mvvm.View.EventForm"
-            android:label="@string/title_activity_event_form"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".mvvm.View.HomePage"
-            android:label="@string/title_activity_home_page"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-    </application>
+        android:theme="@style/AppTheme"></application>
 
 </manifest>
