--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 
 
