--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".mvvm.View.GroupFeedActivity"></activity>
+        <activity android:name=".mvvm.View.GroupFeedFragment"></activity>
         <activity
             android:name=".mvvm.View.LoginActivity"
             android:label="@string/app_name">
