--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'com.squareup.retrofit2:converter-jackson:2.4.0'
 
 }
