--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.github.GrenderG:Toasty:1.2.8'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:2.2.2'
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
