--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,10 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0-alpha3'
     testImplementation 'junit:junit:4.12'
     // required if you want to use Mockito for unit tests
-    testImplementation 'org.mockito:mockito-core:2.7.22'
+    testImplementation 'org.mockito:mockito-core:2.15.0'
     // required if you want to use Mockito for Android tests
     androidTestImplementation 'org.mockito:mockito-android:2.7.22'
-    androidTestImplementation 'org.mockito:mockito-core:2.8.47'
+    androidTestImplementation 'org.mockito:mockito-core:2.15.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
@@ -45,7 +45,11 @@ dependencies {
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.github.GrenderG:Toasty:1.2.8'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:2.2.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.7.0'
+
+
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
